REAL-30 removed rich text editor,post word wrap,issue with getting posts

--- a/client/src/styles/post.css
+++ b/client/src/styles/post.css
@@ -42,9 +42,13 @@
 
 .post-body {
   padding: 5px;
+  width: 100%;
+
 }
 
 .post-body-text {
   font-size: 14px;
   font-weight: 600;
+  text-wrap: wrap;
+ word-wrap: break-word;
 }
